--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,8 @@
 
             <div class="contact-form-container">
                 <h3>Send us a Message</h3>
-                <form class="contact-form">
+                 <form name="Contact us " method="POST" data-netlify="true" class="contact us ">
+  <input type="hidden" name="form-name" value="Contact us " />
                     <div class="form-group">
                         <input type="text" placeholder="Your Name" required>
                     </div>
