--- a/contact.html
+++ b/contact.html
@@ -67,22 +67,29 @@
 
             <div class="contact-form-container">
                 <h3>Send us a Message</h3>
-                 <form name="Contact us " method="POST" data-netlify="true" class="contact-form ">
-  <input type="hidden" name="form-name" value="Contact us " />
-                    <div class="form-group">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                        <textarea placeholder="Your Message" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
+                 <h3>Send us a Message</h3>
+<form name="Contact Us" method="POST" data-netlify="true" class="contact-form">
+  <input type="hidden" name="form-name" value="Contact Us" />
+
+  <div class="form-group">
+    <input type="text" name="name" placeholder="Your Name" required>
+  </div>
+
+  <div class="form-group">
+    <input type="email" name="email" placeholder="Your Email" required>
+  </div>
+
+  <div class="form-group">
+    <input type="text" name="subject" placeholder="Subject">
+  </div>
+
+  <div class="form-group">
+    <textarea name="message" placeholder="Your Message" required></textarea>
+  </div>
+
+  <button type="submit" class="submit-btn">Send Message</button>
+</form>
+
             </div>
 
             <div class="map-container">
