--- a/registration.html
+++ b/registration.html
@@ -33,7 +33,7 @@
     <section class="registration-section">
         <div class="registration-container">
             <h2 class="section-title">Event Registration</h2>
-           <form name="registration" action="https://getform.io/f/azywkgjb" method="POST" data-netlify="true" class="registration-form">
+           <form name="registration"  method="POST" data-netlify="true" class="registration-form">
   <input type="hidden" name="form-name" value="registration" />
 
                 <div class="form-group">
